[package]
name = "boolean-contract-caller"
description = "Simple CosmWasm contract that calls boolean-contract, toggling a boolean set in state"
license = "MIT OR Apache-2.0"
authors = ["Mike Purvis @mikedotexe"]
version = "0.1.2"
edition = "2021"
readme = "README.md"
keywords = ["cosmwasm", "smart-contracts", "interchain", "cosmos", "juno", "blockchain"]

[lib]
crate-type = ["cdylib", "rlib"]

# This does not bloat contract size, it's only for creating the JSON schema
[[bin]]
name = "make-schema"
path = "schema-maker/schema.rs"

[dependencies]
croncat-sdk-tasks = "0.1.4"
croncat-sdk-factory = "0.1.4"
croncat-mod-generic = { version = "0.1.4", features = ["library"] }
cosmwasm-std = "1.1.8"
cosmwasm-schema = "1.1.9"
cw2 = "1.0.1"
cw20 = { version = "1.0.1" }
schemars = "0.8.11"
cw-storage-plus = "1.0.1"
serde_json = "1.0.94"
thiserror = { version = "1.0.37" }

[dev-dependencies]
# no dev dependencies yet, but consider cw-multi-test

# Make sure you've run: "cargo install cargo-run-script"
# Then you can run the scripts below, like: "cargo run-script optimize"
[package.metadata.scripts]
optimize-m1 = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer-arm64:0.12.8
"""
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.8
"""
schema = "cargo +nightly run --bin make-schema"
unit-test = "cargo +nightly test --lib"

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
