[package]
name = "cw-daodao-versioner"
version = "0.0.2"
authors = ["@deveusss"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
staking = ["cw-multi-test/staking"]
stargate = ["cw-multi-test/stargate"]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.5
"""

[dependencies]
cw-croncat-core = { version = "0.1.3", path = "../../packages/cw-croncat-core" }
cw-rules-core = { version = "0.1.1", path = "../../packages/cw-rules-core" }
cwd-pre-propose-base = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts" }

cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.0.0"
cw-storage-plus = "0.13.2"
cw-utils = "0.13"
cw2 = "0.16.0"
cw721 = "0.16.0"
cw721-base = "0.16.0"
cw20 = "0.13"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
cw4 = "0.16.0"
cw4-group = "0.16.0"
base64 = "0.13"
voting-v1 = { package = "voting", version = "0.1.0", git = "https://github.com/DA0-DA0/dao-contracts.git", tag = "v1.0.0" }

# This thing saved our lives thanks @hashedone for implementing it
serde-cw-value = "0.7.0"

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.16.0"
cw-utils = "0.13"
cw20-base = "0.13"
# DAO contracts
cwd-voting = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts.git" }

cwd-proposal-multiple = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts" }
cwd-voting-cw20-staked = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts" }
cw20-stake = { version = "0.2.6", git = "https://github.com/DA0-DA0/dao-contracts" }
cwd-core = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts" }
cwd-interface = { version = "0.2.0", git = "https://github.com/DA0-DA0/dao-contracts" }
# Testing generic msg
cw4 = "0.16.0"
cw4-group = "0.16.0"
base64 = "0.13.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

cw-croncat = { version = "*", path = "../cw-croncat" }
cw-rules = { version = "*", path = "../cw-rules" }
cw-rules-core = { version = "*", path = "../../packages/cw-rules-core" }
cw-code-id-registry = { version = "0.1.0", git = "https://github.com/DA0-DA0/code-id-registry" }
